postcss/testData/inspections/annotator/normalRulesetWithNestingSelectors.pcss
<error descr="Top level ruleset selector should not contain '&'">&</error> h2 {
    color: white;
}

<error descr="Top level ruleset selector should not contain '@nest'">@nest</error> h2 <error descr="Top level ruleset selector should not contain '&'">&</error> {
    color: white;
}